src/app/components/settings/settings.component.scss
h2,
h3,
p {
	margin: 0;
	margin-right: 8px;
}

h3 {
	margin-bottom: 8px;
}

form {
	margin-bottom: 24px;
}

form:last-of-type {
	margin-bottom: 12px;
}

#settings-button {
	position: absolute;
	top: 30px;
	left: 10px;
	z-index: 110;
	height: 56px;
	width: 56px;

	.svg-button img {
		width: 100%;
		height: 100%;
		content: url("/images/settings_cog.svg");
	}
}

#settings-menu {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 230;
	background-color: var(--dark-gray);
	text-transform: uppercase;
	display: flex;
	flex-direction: column;
	padding: 12px;
	height: 100%;

	.header {
		display: flex;
		justify-content: space-between;
		align-items: self-end;
		padding-bottom: 1rem;
	}

	.svg-button {
		height: 32px;
		width: 32px;
		img {
			width: 100%;
			height: 100%;
			content: url("/images/close-cross.svg");
		}
	}

	button {
		height: 52px;
		&:not(:last-of-type) {
			margin-bottom: 8px;
		}
	}
}

.svg-button {
	cursor: pointer;
	border: 0;
	background: transparent;
	opacity: 35%;
	&:hover {
		opacity: 100%;
	}
}

.under-menu {
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	background-color: var(--black-trans);
	z-index: 220;
}

#help-modal, #contact-modal {
	z-index: 240;
	
	.modal-box {
		height: calc(100vh - 60px);
		width: calc(100vw - 60px);

		.content {
			display: flex;
			flex-direction: column;
			padding: 20px;
			font-size: 20pt;
			overflow-y: auto;
			height: 100%;
			color: var(--white);
		}
	}

	.svg-button {
		right: 48px;
		position: fixed;
		height: 32px;
		width: 32px;
		img {
			width: 100%;
			height: 100%;
			content: url("/images/close-cross.svg");
		}
	}

	table {
		width: 100%;
		border-collapse: collapse;
		font-size: 20px;
		margin-bottom: 24px;
		color: var(--light-gray);
	
		th {
			color: var(--white);
			font-weight: normal;
	
			div {
				width: 100%;
				&.stop-all-icon {
					height: 36px;
					content: url("/images/stop-circle.svg");
				}
				
				&.soundboard-icon {
					height: 36px;
					content: url("/images/music.svg");
				}
				
				&.stratagem-icon {
					height: 36px;
					content: url("/images/sound.svg");
				}
			}
		}
		
		th, td {
			padding: 4px;
		}
	}
	
	table, td, th {
		border: 1px solid var(--gray);
	}
}

#contact-modal {
	.name {
		display: flex;
		align-items: center;
		justify-content: center;
		padding-bottom: 8px;

		img {
			height: 80px;
			width: 80px;
			padding-right: 8px;
		}
	}
	.buttons {
		display: grid;
		grid-template-columns: 1fr 1fr;
		grid-gap: 8px;

		button {
			height: unset;
			display: flex;
			align-items: center;
			padding-left: 0;
			text-transform: unset;
	
			img {
				height: 56px;
				width: 56px;
				padding: 8px;
				padding-right: 16px;

				&.steam-icon {
					content: url("/images/steam-icon.svg");
				}
	
				&.email-icon {
					content: url("/images/gmail-icon.svg");
				}
			}
		}
	}
}

